@@ -86,6 +86,7 @@
         <configuration>
           <source>23</source>
           <target>23</target>
+            <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
